--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta6",
+    "classnames": "^2.2.5",
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
     "eslint-config-standard-react": "^1.2.1",
