--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dnd-html5-backend": "^2.0.2",
     "react-dom": "0.14.7",
     "react-modal": "^0.6.0",
+    "react-router": "^4.2.0",
     "react-slick": "^0.12.0",
     "react-tap-event-plugin": "^0.2.1",
     "reveal.js": "3.2.0",
